# Audocare-AI-Agent

./: .gitignore  README.md  main.py  pyproject.toml
src/: assistant.py  pipeline_model.py  realtime_model.py
src/shared/: constants.py
